chore: update aws region us-east-1 to ap-northeast-2

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -77,12 +77,12 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ap-northeast-2
 
       # Create the Elastic Beanstalk application
       - name: Create EBS application
         run: |
-          eb init -p python-3.6 hello-world --region us-east-1
+          eb init -p python-3.9 youmo --region ap-northeast-2
       # Deploy to (or Create) the Elastic Beanstalk environment
       - name: Create test environment & deploy
         run: |
