--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cytoolz==0.11.0
 dask==2021.6.0
 decorator==5.0.9
 Flask==2.0.1
+Flask-Cors==3.0.10
 fsspec==2021.6.0
 get-video-properties==0.1.1
 idna==2.10
@@ -54,6 +55,7 @@ Pygments==2.9.0
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
 PySocks==1.7.1
+python-dotenv==0.17.1
 python-dateutil==2.8.1
 python-utils==2.5.6
 PyWavelets==1.1.1
