--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ dask==2021.6.0
 decorator==5.0.9
 Flask==2.0.1
 Flask-Cors==3.0.10
+flask-ngrok==0.0.25
 fsspec==2021.6.0
 get-video-properties==0.1.1
 idna==2.10
@@ -65,6 +66,7 @@ requests==2.25.1
 scikit-image==0.18.1
 scipy==1.6.3
 setuptools==49.6.0
+setuptools-rust==
 six==1.16.0
 tifffile==2021.4.8
 toolz==0.11.1
