--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ requests==2.25.1
 scikit-image==0.18.1
 scipy==1.6.3
 setuptools==49.6.0
-setuptools-rust==
+setuptools-rust==0.12.1
 six==1.16.0
 tifffile==2021.4.8
 toolz==0.11.1
