--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ appdirs==1.4.4
 appnope==0.1.2
 backcall==0.2.0
 backports.functools-lru-cache==1.6.4
+boto3==1.17.97
+botocore==1.20.97
 brotlipy==0.7.0
 certifi==2021.5.30
 cffi==1.14.5
@@ -17,6 +19,7 @@ Flask==2.0.1
 Flask-Cors==3.0.10
 fsspec==2021.6.0
 get-video-properties==0.1.1
+gunicorn==20.1.0
 idna==2.10
 imagecodecs==2021.3.31
 imageio==2.9.0
@@ -26,6 +29,7 @@ ipython-genutils==0.2.0
 itsdangerous==2.0.1
 jedi==0.18.0
 Jinja2==3.0.1
+jmespath==0.10.0
 jupyter-client==6.1.12
 jupyter-core==4.7.1
 kiwisolver==1.3.1
@@ -37,13 +41,13 @@ networkx==2.3
 numpy==1.20.3
 olefile==0.46
 onnxruntime==1.7.0
+opencv-python==4.5.2.54
 packaging==20.9
 parso==0.8.2
 partd==1.2.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.2.0
-pip==21.1.2
 pooch==1.4.0
 progressbar2==3.53.1
 prompt-toolkit==3.0.18
@@ -55,24 +59,24 @@ Pygments==2.9.0
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
 PySocks==1.7.1
-python-dotenv==0.17.1
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 python-utils==2.5.6
 PyWavelets==1.1.1
 PyYAML==5.4.1
 pyzmq==22.1.0
 requests==2.25.1
+s3transfer==0.4.2
 scikit-image==0.18.1
 scipy==1.6.3
-setuptools==49.6.0
+semantic-version==2.8.5
 setuptools-rust==0.12.1
 six==1.16.0
 tifffile==2021.4.8
+toml==0.10.2
 toolz==0.11.1
 tornado==6.1
 traitlets==5.0.5
 urllib3==1.26.5
 wcwidth==0.2.5
 Werkzeug==2.0.1
-wheel==0.36.2
-gunicorn==20.1.0
