--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.4
 appnope==0.1.2
+APScheduler==1.14.0
 backcall==0.2.0
 backports.functools-lru-cache==1.6.4
 brotlipy==0.7.0
@@ -15,6 +16,7 @@ dask==2021.6.0
 decorator==5.0.9
 Flask==2.0.1
 Flask-Cors==3.0.10
+Flask-Caching==1.10.1
 fsspec==2021.6.0
 gunicorn==20.1.0
 idna==2.10
